--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="utf-8">
+<title>松原のページ！</title>
+</head>
+<body>
+  <h1>こんにちわ世界</h1>
+  <p>こんにちわこんにゃくゼリー</p>
+  </body>
+</html>
