--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="utf-8">
@@ -6,6 +6,8 @@
 <title>松原のページ！</title>
 </head>
 <body>
+<img>
+<img src="img/DUMMY.jpg>
   <h1>こんにちわ世界</h1>
   <p>こんにちわこんにゃくゼリー</p>
   </body>
