--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>松原のページ！</title>
+<title>松原のページ</title>
 </head>
 <body>
 <img>
-<img src="img/DUMMY.jpg">
+<img src="img/usaminnhyou.jpg">
   <h1>こんにちわ世界</h1>
   <p>こんにちわこんにゃくゼリー</p>
   </body>
