--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 <title>松原のページ</title>
 </head>
 <body>
-<img>
+  <h1>うさキャッチ</h1>
+  <p>＊スマートフォン<br>
+    ＊120時間前後ほど<br>
+＊Unity、C#<br>
+＊4人製作<br>
+＊ウサギ積み上げ系ゲーム<br>
+　　＊上から降ってくる個性的なウサギを積み上げてスコアを稼ぐゲーム<br>
+＊メニュー画面、シーンフェイド、図鑑<br>
+＊メニュー画面：スワイプしてclickすると進むシーンを変更できるようにしました。スワイプは左右どちらに動かしたかを取得してそれを反映させています。<br>
+＊シーンフェイド：　アニメーションとパネルのアスペクト比の変更を使用してしてシーンフェイドを再現しました。<br>
+＊図鑑では、ゲーム内で取得したウサギのデータを保存してそのデータを元に図鑑で表示できるようにしました、図鑑のウサギをclickすると詳細なデータを見ることもできます。もちろん取得していないウサギはclickしても反応しないようになっています。<br>
+  </p><img>
 <img src="img/usaminnhyou.jpg">
-  <h1>こんにちわ世界</h1>
-  <p>こんにちわこんにゃくゼリー</p>
   </body>
 </html>
