--- a/index.html
+++ b/index.html
@@ -2,22 +2,42 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>松原のページ</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <h1>うさキャッチ</h1>
-  <p>＊スマートフォン<br>
-    ＊120時間前後ほど<br>
-＊Unity、C#<br>
-＊4人製作<br>
-＊ウサギ積み上げ系ゲーム<br>
-　　＊上から降ってくる個性的なウサギを積み上げてスコアを稼ぐゲーム<br>
-＊メニュー画面、シーンフェイド、図鑑<br>
-＊メニュー画面：スワイプしてclickすると進むシーンを変更できるようにしました。スワイプは左右どちらに動かしたかを取得してそれを反映させています。<br>
-＊シーンフェイド：　アニメーションとパネルのアスペクト比の変更を使用してしてシーンフェイドを再現しました。<br>
-＊図鑑では、ゲーム内で取得したウサギのデータを保存してそのデータを元に図鑑で表示できるようにしました、図鑑のウサギをclickすると詳細なデータを見ることもできます。もちろん取得していないウサギはclickしても反応しないようになっています。<br>
-  </p><img>
-<img src="img/usaminnhyou.jpg">
-  </body>
+<div id="doc" class="markdown-body container-fluid"><h1 id="うさキャッチ">うさキャッチ</h1>
+<p><li>製作環境、人数<br>
+
+Unity、C#<br>
+4人製作<br>
+
+<img src="https://i.imgur.com/R6QflhG.png" alt=""></p>
+</li>
+
+</ul>
+
+<ul>
+<li>
+<p>ウサギ積み上げ系ゲーム<br>
+
+上から降ってくる個性的なウサギを積み上げてスコアを稼ぐゲーム</p>
+</li>
+<li>
+
+ <p>製作場所<br>
+メニュー画面、シーンフェイド、図鑑<br>
+メニュー画面：スワイプしてclickすると進むシーンを変更できるようにしました。スワイプは左右どちらに動かしたかを取得してそれを反映させています。<br>
+シーンフェイド：　アニメーションとパネルのアスペクト比の変更を使用してしてシーンフェイドを再現しました。</p>
+</li>
+
+<li>
+<p>ゲーム説明<br>
+図鑑では、ゲーム内で取得したウサギのデータを保存してそのデータを元に図鑑で表示できるようにしました、図鑑のウサギをclickすると詳細なデータを見ることもできます。もちろん取得していないウサギはclickしても反応しないようになっています。<br>
+
+<img src="https://i.imgur.com/ZNgjX4t.png" alt=""></p>
+</li>
+</ul>
+</blockquote></div>
+</body>
 </html>
